# django-triggers-example

./: .coveragerc  .gitignore  IDEAS.md  README.md  manage.py  pyproject.toml
core/: models.py
django_triggers_example/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  test_todos.py
todos/: admin.py  models.py
todos/migrations/: 0001_initial.py  0002_rename_date_completed_todo_date_finished.py
todos/triggers/: __init__.py  apps.py  models.py
todos/triggers/migrations/: 0001_initial.py  0002_createtodoaction_some.py  0003_sendemailaction_delete_createtodoaction.py  0004_unfinishedtodoscountcondition_and_more.py
